src/test/ui/const-generics/generic-function-call-in-array-length.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/generic-function-call-in-array-length.rs:9:39
   |
LL | fn bar<const N: usize>() -> [u32; foo(N)] {
   |                                       ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`

error: generic parameters may not be used in const operations
  --> $DIR/generic-function-call-in-array-length.rs:12:13
   |
LL |     [0; foo(N)]
   |             ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`

error: aborting due to 2 previous errors

